--- a/public/assets/custom/css/custom.css
+++ b/public/assets/custom/css/custom.css
@@ -9433,3 +9433,8 @@
     transition: color 0.15s ease, background-color 0.15s ease, border-color 0.15s ease, box-shadow 0.15s ease;
     color: #FFFFFF !important;
   }
+
+.bord-bottom {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 5px;
+}
