--- a/public/front/front/css/contactus.css
+++ b/public/front/front/css/contactus.css
@@ -22,7 +22,7 @@
   }
   
   #contactus {
-    margin-top: 120px;
+    /* margin-top: 120px; */
     padding: 120px 0px;
     background-image: url(../../../assets/images/artisan.png);
     background-position: center center;
