--- a/public/front/front/css/landing.css
+++ b/public/front/front/css/landing.css
@@ -1,77 +1,77 @@
 
-#contactus .section-heading {
+#landing-atas .section-heading {
     margin-bottom: 30px;
   }
   
-  #contactus .section-heading h6 {
+  #landing-atas .section-heading h6 {
     color: #333;
   }
   
-  #contactus .section-heading h2 {
+  #landing-atas .section-heading h2 {
     color: #333;
     font-weight: 700;
   }
   
-  #contactus .section-heading h6:before {
+  #landing-atas .section-heading h6:before {
     background-color: #fff;
   }
   
-  #contactus p {
+  #landing-atas p {
     color: #333;
     margin-bottom: 65px;
   }
 
-  #contactus {
+  #landing-atas {
     /* margin-top: 120px; */
     padding: 120px 0px;
-    background-image: url(../../../assets/images/artisan.png);
+    background-image: url(../../../assets/images/artisan.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
-  #contactus .phone,
-  #contactus .message {
+  #landing-atas .phone,
+  #landing-atas .message {
     background-color: #fff;
     border-radius: 5px;
     text-align: center;
-    padding: 0px 0px 10px 0px;
+    padding: 0px 0px 20px 0px;
   }
   
-  #contactus .phone i,
-  #contactus .message i {
-    width: 50px;
-    height: 50px;
+  #landing-atas .phone i,
+  #landing-atas .message i {
+    width: 70px;
+    height: 70px;
     display: inline-block;
     text-align: center;
-    line-height: 50px;
+    line-height: 70px;
     color: #fff;
     background-color: #28a745;
     border-radius: 50%;
     font-size: 24px;
-    margin-top: -15px;
+    margin-top: -35px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
   }
   
-  #contactus .phone h4,
-  #contactus .message h4 {
+  #landing-atas .phone h4,
+  #landing-atas .message h4 {
     font-size: 20px;
     font-weight: 700;
     margin-top: 15px;
     margin-bottom: 10px;
   }
   
-  #contactus .phone span a,
-  #contactus .message span a {
+  #landing-atas .phone span a,
+  #landing-atas .message span a {
     font-size: 14px;
     color: #2a2a2a;
     transition: all .3s;
   }
   
-  #contactus .phone span a:hover,
-  #contactus .message span a:hover {
+  #landing-atas .phone span a:hover,
+  #landing-atas .message span a:hover {
     color: #28a745;
   }
   
